# suitune

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  README.md  REFACTOR.md  manage.py  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  manage.py  pyproject.toml
backend/apps/api/: __init__.py  urls.py  views.py
backend/apps/core/: __init__.py  models.py  views.py
backend/apps/playback/: __init__.py  models.py  serializers.py  views.py
backend/apps/radio/: __init__.py  apps.py  models.py  serializers.py  services.py  views.py
backend/apps/users/: __init__.py  models.py  views.py
backend/config/: __init__.py  gunicorn.conf.py  logging.py
backend/suitune/: asgi.py  wsgi.py
backend/suitune/settings/: base.py
backend/tests/: __init__.py  test_radio_service.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.js  App.jsx  router.js  router.jsx
frontend/src/core/: types.d.ts
ops/: nginx.conf
scripts/: setup.sh
shared/: README.md
sui/: adapter.py  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
sui/management/commands/: extract_artworks.py  watch_music.py
sui/migrations/: 0001_initial.py
sui/static/css/: animations.css
sui/static/js/: app.js
sui/templates/account/: login.html  logout.html  password_reset.html  signup.html
suitune/: asgi.py  settings.py  urls.py  wsgi.py
templates/account/: login.html  logout.html  password_reset.html
templates/sui/: profile.html  welcome.html
(+26 files in other folders)
